src/JazLabs/hardware/digHolo/digHolo_v1.0.0/Examples/Matlab/digHolo.h


EXT_C int digHoloConfigGetIFFTResolutionMode(int handleIdx);
EXT_C int digHoloConfigSetWavelengthCentre(int handleIdx, float lambda0);
EXT_C float digHoloConfigGetWavelengthCentre(int handleIdx);
EXT_C int digHoloConfigSetWavelengths(int handleIdx, float* wavelengths, int wavelengthCount);
EXT_C int digHoloConfigSetWavelengthsLinearFrequency(int handleIdx, float wavelengthStart, float wavelengthStop, int wavelengthCount);
EXT_C float* digHoloConfigGetWavelengths(int handleIdx, int *wavelengthCount);
EXT_C int digHoloConfigSetWavelengthOrdering(int handleIdx, int inoutIdx, int ordering);
EXT_C int digHoloConfigGetWavelengthOrdering(int handleIdx, int inoutIdx);
EXT_C int digHoloConfigSetAutoAlignBeamCentre(int handleIdx, int enable);
EXT_C int digHoloConfigGetAutoAlignBeamCentre(int handleIdx);
EXT_C int digHoloConfigSetAutoAlignDefocus(int handleIdx, int enable);
EXT_C int digHoloConfigGetAutoAlignDefocus(int handleIdx);
EXT_C int digHoloConfigSetAutoAlignTilt(int handleIdx, int enable);
EXT_C int digHoloConfigGetAutoAlignTilt(int handleIdx);
EXT_C int digHoloConfigSetAutoAlignBasisWaist(int handleIdx, int enable);
EXT_C int digHoloConfigGetAutoAlignBasisWaist(int handleIdx);
EXT_C int digHoloConfigSetAutoAlignFourierWindowRadius(int handleIdx, int enable);
EXT_C int digHoloConfigGetAutoAlignFourierWindowRadius(int handleIdx);
EXT_C int digHoloConfigSetAutoAlignTol(int handleIdx, float tolerance);
EXT_C float digHoloConfigGetAutoAlignTol(int handleIdx);
EXT_C int digHoloConfigSetAutoAlignPolIndependence(int handleIdx, int polIndependence);
EXT_C int digHoloConfigGetAutoAlignPolIndependence(int handleIdx);
EXT_C int digHoloConfigSetAutoAlignBasisMulConjTrans(int handleIdx, int mulConjTranspose);
EXT_C int digHoloConfigGetAutoAlignBasisMulConjTrans(int handleIdx);
EXT_C int digHoloConfigSetAutoAlignMode(int handleIdx, int alignMode);
EXT_C int digHoloConfigGetAutoAlignMode(int handleIdx);