src/JazLabs/hardware/digHolo/digHolo_v1.0.0/src/digholoHeader.py


# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 797
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetIFFTResolutionMode", "cdecl"):
        continue
    digHoloConfigGetIFFTResolutionMode = _lib.get("digHoloConfigGetIFFTResolutionMode", "cdecl")
    digHoloConfigGetIFFTResolutionMode.argtypes = [c_int]
    digHoloConfigGetIFFTResolutionMode.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 814
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetWavelengthCentre", "cdecl"):
        continue
    digHoloConfigSetWavelengthCentre = _lib.get("digHoloConfigSetWavelengthCentre", "cdecl")
    digHoloConfigSetWavelengthCentre.argtypes = [c_int, c_float]
    digHoloConfigSetWavelengthCentre.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 822
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetWavelengthCentre", "cdecl"):
        continue
    digHoloConfigGetWavelengthCentre = _lib.get("digHoloConfigGetWavelengthCentre", "cdecl")
    digHoloConfigGetWavelengthCentre.argtypes = [c_int]
    digHoloConfigGetWavelengthCentre.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 832
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetWavelengths", "cdecl"):
        continue
    digHoloConfigSetWavelengths = _lib.get("digHoloConfigSetWavelengths", "cdecl")
    digHoloConfigSetWavelengths.argtypes = [c_int, POINTER(c_float), c_int]
    digHoloConfigSetWavelengths.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 843
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetWavelengthsLinearFrequency", "cdecl"):
        continue
    digHoloConfigSetWavelengthsLinearFrequency = _lib.get("digHoloConfigSetWavelengthsLinearFrequency", "cdecl")
    digHoloConfigSetWavelengthsLinearFrequency.argtypes = [c_int, c_float, c_float, c_int]
    digHoloConfigSetWavelengthsLinearFrequency.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 854
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetWavelengths", "cdecl"):
        continue
    digHoloConfigGetWavelengths = _lib.get("digHoloConfigGetWavelengths", "cdecl")
    digHoloConfigGetWavelengths.argtypes = [c_int, POINTER(c_int)]
    digHoloConfigGetWavelengths.restype = POINTER(c_float)
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 886
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetWavelengthOrdering", "cdecl"):
        continue
    digHoloConfigSetWavelengthOrdering = _lib.get("digHoloConfigSetWavelengthOrdering", "cdecl")
    digHoloConfigSetWavelengthOrdering.argtypes = [c_int, c_int, c_int]
    digHoloConfigSetWavelengthOrdering.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 895
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetWavelengthOrdering", "cdecl"):
        continue
    digHoloConfigGetWavelengthOrdering = _lib.get("digHoloConfigGetWavelengthOrdering", "cdecl")
    digHoloConfigGetWavelengthOrdering.argtypes = [c_int, c_int]
    digHoloConfigGetWavelengthOrdering.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 938
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignBeamCentre", "cdecl"):
        continue
    digHoloConfigSetAutoAlignBeamCentre = _lib.get("digHoloConfigSetAutoAlignBeamCentre", "cdecl")
    digHoloConfigSetAutoAlignBeamCentre.argtypes = [c_int, c_int]
    digHoloConfigSetAutoAlignBeamCentre.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 946
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignBeamCentre", "cdecl"):
        continue
    digHoloConfigGetAutoAlignBeamCentre = _lib.get("digHoloConfigGetAutoAlignBeamCentre", "cdecl")
    digHoloConfigGetAutoAlignBeamCentre.argtypes = [c_int]
    digHoloConfigGetAutoAlignBeamCentre.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 955
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignDefocus", "cdecl"):
        continue
    digHoloConfigSetAutoAlignDefocus = _lib.get("digHoloConfigSetAutoAlignDefocus", "cdecl")
    digHoloConfigSetAutoAlignDefocus.argtypes = [c_int, c_int]
    digHoloConfigSetAutoAlignDefocus.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 963
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignDefocus", "cdecl"):
        continue
    digHoloConfigGetAutoAlignDefocus = _lib.get("digHoloConfigGetAutoAlignDefocus", "cdecl")
    digHoloConfigGetAutoAlignDefocus.argtypes = [c_int]
    digHoloConfigGetAutoAlignDefocus.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 972
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignTilt", "cdecl"):
        continue
    digHoloConfigSetAutoAlignTilt = _lib.get("digHoloConfigSetAutoAlignTilt", "cdecl")
    digHoloConfigSetAutoAlignTilt.argtypes = [c_int, c_int]
    digHoloConfigSetAutoAlignTilt.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 980
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignTilt", "cdecl"):
        continue
    digHoloConfigGetAutoAlignTilt = _lib.get("digHoloConfigGetAutoAlignTilt", "cdecl")
    digHoloConfigGetAutoAlignTilt.argtypes = [c_int]
    digHoloConfigGetAutoAlignTilt.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 989
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignBasisWaist", "cdecl"):
        continue
    digHoloConfigSetAutoAlignBasisWaist = _lib.get("digHoloConfigSetAutoAlignBasisWaist", "cdecl")
    digHoloConfigSetAutoAlignBasisWaist.argtypes = [c_int, c_int]
    digHoloConfigSetAutoAlignBasisWaist.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 997
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignBasisWaist", "cdecl"):
        continue
    digHoloConfigGetAutoAlignBasisWaist = _lib.get("digHoloConfigGetAutoAlignBasisWaist", "cdecl")
    digHoloConfigGetAutoAlignBasisWaist.argtypes = [c_int]
    digHoloConfigGetAutoAlignBasisWaist.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1008
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignFourierWindowRadius", "cdecl"):
        continue
    digHoloConfigSetAutoAlignFourierWindowRadius = _lib.get("digHoloConfigSetAutoAlignFourierWindowRadius", "cdecl")
    digHoloConfigSetAutoAlignFourierWindowRadius.argtypes = [c_int, c_int]
    digHoloConfigSetAutoAlignFourierWindowRadius.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1016
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignFourierWindowRadius", "cdecl"):
        continue
    digHoloConfigGetAutoAlignFourierWindowRadius = _lib.get("digHoloConfigGetAutoAlignFourierWindowRadius", "cdecl")
    digHoloConfigGetAutoAlignFourierWindowRadius.argtypes = [c_int]
    digHoloConfigGetAutoAlignFourierWindowRadius.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1025
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignTol", "cdecl"):
        continue
    digHoloConfigSetAutoAlignTol = _lib.get("digHoloConfigSetAutoAlignTol", "cdecl")
    digHoloConfigSetAutoAlignTol.argtypes = [c_int, c_float]
    digHoloConfigSetAutoAlignTol.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1033
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignTol", "cdecl"):
        continue
    digHoloConfigGetAutoAlignTol = _lib.get("digHoloConfigGetAutoAlignTol", "cdecl")
    digHoloConfigGetAutoAlignTol.argtypes = [c_int]
    digHoloConfigGetAutoAlignTol.restype = c_float
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1046
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignPolIndependence", "cdecl"):
        continue
    digHoloConfigSetAutoAlignPolIndependence = _lib.get("digHoloConfigSetAutoAlignPolIndependence", "cdecl")
    digHoloConfigSetAutoAlignPolIndependence.argtypes = [c_int, c_int]
    digHoloConfigSetAutoAlignPolIndependence.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1058
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignPolIndependence", "cdecl"):
        continue
    digHoloConfigGetAutoAlignPolIndependence = _lib.get("digHoloConfigGetAutoAlignPolIndependence", "cdecl")
    digHoloConfigGetAutoAlignPolIndependence.argtypes = [c_int]
    digHoloConfigGetAutoAlignPolIndependence.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1071
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignBasisMulConjTrans", "cdecl"):
        continue
    digHoloConfigSetAutoAlignBasisMulConjTrans = _lib.get("digHoloConfigSetAutoAlignBasisMulConjTrans", "cdecl")
    digHoloConfigSetAutoAlignBasisMulConjTrans.argtypes = [c_int, c_int]
    digHoloConfigSetAutoAlignBasisMulConjTrans.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1083
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignBasisMulConjTrans", "cdecl"):
        continue
    digHoloConfigGetAutoAlignBasisMulConjTrans = _lib.get("digHoloConfigGetAutoAlignBasisMulConjTrans", "cdecl")
    digHoloConfigGetAutoAlignBasisMulConjTrans.argtypes = [c_int]
    digHoloConfigGetAutoAlignBasisMulConjTrans.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1101
for _lib in _libs.values():
    if not _lib.has("digHoloConfigSetAutoAlignMode", "cdecl"):
        continue
    digHoloConfigSetAutoAlignMode = _lib.get("digHoloConfigSetAutoAlignMode", "cdecl")
    digHoloConfigSetAutoAlignMode.argtypes = [c_int, c_int]
    digHoloConfigSetAutoAlignMode.restype = c_int
    break

# /Users/s4356803/Documents/PhD/Codes/PythonCode/Experiments/Lab_Equipment/digHolo/digHolo_v1.0.0/src/digHolo.h: 1109
for _lib in _libs.values():
    if not _lib.has("digHoloConfigGetAutoAlignMode", "cdecl"):
        continue
    digHoloConfigGetAutoAlignMode = _lib.get("digHoloConfigGetAutoAlignMode", "cdecl")
    digHoloConfigGetAutoAlignMode.argtypes = [c_int]
    digHoloConfigGetAutoAlignMode.restype = c_int
    break
